# SujanMotors

./: .gitignore  ADDCATEGORY_PAGE_ANALYSIS.md  AUTHENTICATION_IMPLEMENTATION_GUIDE.md  AutoPartShop.sln  BACKEND_API_IMPLEMENTATION_SUMMARY.md  BLAZOR_RENDERMODE_GUIDE.md  BUILD_ERROR_FIXES.md  CALLBACK_FLOW_COMPARISON.md  CATEGORYDETAIL_BEFORE_AFTER.md  CATEGORYDETAIL_VALIDATION_CHECKLIST.md  CATEGORY_PAGES_COMPLETE_ANALYSIS.md  CATEGORY_PAGES_STATUS_DASHBOARD.md  CLAUDE.md  DELETE_BUTTON_FIX.md  EDITCATEGORY_DEBUGGING_GUIDE.md  EDITCATEGORY_QUICK_REFERENCE.md  EDITCATEGORY_VERIFICATION_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PAYMENT_ARCHITECTURE_FIX.md  PURCHASE_RETURN_IMPLEMENTATION.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  RECURSIVE_IMPLEMENTATION_COMPLETE.md  RENDERMODE_FIX_SUMMARY.md  RESTART_ANGULAR.bat  SETUP_GUIDE.txt  SET_REORDER_LEVELS.bat  STOCK_LOT_VERIFICATION_GUIDE.md  WEBASSEMBLY_EXAMPLE.razor  docker-compose.override.yml  docker-compose.yml  fix_empty_transaction_numbers.sql  fix_rendermode.ps1  launchSettings.json  test-grn.json  test-grn2.json  test-po.json  verify_advance_payments.sql
.claude/: settings.local.json
src/AutoPartShop.AI/: .env.example  Dockerfile  README.md  pyproject.toml
src/AutoPartShop.AI/.chainlit/: config.toml
src/AutoPartShop.AI/app/: agent.py  chainlit_app.py  config.py  models.py  state.py
src/AutoPartShop.AI/app/prompts/: system_prompt.txt
src/AutoPartShop.AI/app/services/: api_client.py  memory.py  tools.py
src/AutoPartShop.AI/public/: auto-voice.js  autopartshop-theme.css
(+2038 files in other folders)
