[project]
name = "autopartshop-ai"
version = "1.0.0"
description = "Production-ready AI sales agent for AutoPartShop.AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chainlit>=2.11.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "langchain>=1.2.15",
  "langchain-core>=1.2.10",
  "langchain-openai>=1.0.2",
  "langgraph>=1.1.5",
  "qdrant-client==1.15.1",
  "httpx==0.28.1",
  "langchain-agent>=0.1.1",
  "speechrecognition>=3.16.0",
  "pydub>=0.25.1",
  "gtts>=2.5.4",
  "edge-tts>=7.2.8",
]

[dependency-groups]
dev = []
